Add endpoints required for fvn.li integration
